Fixed z-index of card tags

--- a/src/components/portfolio/CardGallery/ProyectGallery.css
+++ b/src/components/portfolio/CardGallery/ProyectGallery.css
@@ -50,7 +50,7 @@
     min-width: 30px;
     padding: 2px 10px;
     border-radius: 20px;
-    z-index: 1000;
+    z-index: 1;
     margin: 2px 5px;
 }
 
